# genesis-grid

./: .gitignore  LICENSE  PROJECT_CONTEXT.md  README.md  RELEASE_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AgentsView.tsx  Chat.tsx  ChatHistory.tsx  HardwareCheck.tsx  KanbanBoard.tsx  MemoryCore.tsx  ModelLibrary.tsx  Notebook.tsx  OnlineFallback.tsx  SkillsTools.tsx
src/lib/: modelTiers.ts
src/themes/: base.css  dark.css  light.css
