[package]
name = "genesis-grid"
version = "2.0.0"
description = "Genesis Grid — a one-click local AI desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "shell-open", "dialog-all", "fs-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
open = "5"
dirs = "5"
regex = "1.13.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dxgi", "Win32_Foundation"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
